--- a/apps/api/src/templates/forgot_password.html
+++ b/apps/api/src/templates/forgot_password.html
@@ -1,4 +1,2 @@
 <h1>Alteração de senha</h1>
-<p>
-	Você solicitou a alteração de sua senha. Utilize esse token: {{ token }}
-</p>
+<p>Você solicitou a alteração de sua senha. Utilize esse token: {{ token }}</p>
